backend/imdf_db_tables.txt
D:\ComfyUI\.ext\python.exe :   File "<string>", line 5
所在位置 行:1 字符: 56
+ ... Hermes\生产平台\nanobot-factory\backend'; D:\ComfyUI\.ext\python.exe -c "
+                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 5:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    cursor.execute(" SELECT name FROM sqlite_master WHERE type=table ORDER BY name\)
                   ^
SyntaxError: unterminated string literal (detected at line 5)
